<?php

namespace App\Fisca\Sdk\Client\Model;

class ControlValor
{



}