<?php

namespace App\Fisca\Sdk\Client\Model\State;

enum EstadoControl: string
{
    case ACTUAL = 'ACTUAL';
    case CARGADO = 'CARGADO';

}