<?php

namespace App\Fisca\Sdk\Client\Model\Type;

enum TipoConstancia
{
    case SI;
    case NO;
    case OPCIONAL;

}