<?php

namespace App\Fisca\Sdk\Client\Model\Type;

enum TipoCumplimiento
{
    case SI;
    case NO;
    case INDICA;

}